--- a/dashboard.html
+++ b/dashboard.html
@@ -4,109 +4,156 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Dashboard</title>
-<link rel="stylesheet" href="style.css">
-</head>
 
-<body class="dash-bg">
-
-<!-- Logout -->
-<button id="logoutBtn" class="btn3d logout-btn">Logout</button>
-
-<!-- Main Buttons -->
-<div class="button-container">
-
-  <button class="btn3d color-btn"
-    onclick="window.open('https://electoralsearch.eci.gov.in/=', '_blank')">
-    Election Search
-  </button>
-
-  <button class="btn3d color-btn"
-    onclick="window.open('https://mahasecvoterlist.in/ObjectionOnClick/SearchVoterName=', '_blank')">
-    Voter Name Search
-  </button>
-
-  <button class="btn3d color-btn" onclick="openCloudinaryUpload()">
-    Upload Image
-  </button>
-
-  <!-- ⭐ FIXED: PRINT PAGE BUTTON NOW OPENS print.html -->
-  <button class="btn3d blinking" onclick="window.location.href='print.html'">
-    Print Page
-  </button>
-
-</div>
-
-<!-- Uploaded images -->
-<div id="images"
-  style="margin-top:20px; display:flex; flex-wrap:wrap; gap:10px; justify-content:center;">
-</div>
-
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
 
+<style>
+*{box-sizing:border-box;margin:0;padding:0;font-family:Arial}
+html,body{width:100%;height:100%;overflow:hidden}
+
+/* ===== BACKGROUND SLIDER ===== */
+body{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  flex-direction:column;
+}
+body::before{
+  content:"";
+  position:fixed;
+  top:0;left:0;
+  width:100%;
+  height:100%;
+  z-index:-1;
+  background-size:cover;
+  background-position:center;
+  animation:bgSlide 25s infinite;
+}
+@keyframes bgSlide{
+0%{background-image:url('https://i.ibb.co/FLQDzSGp/1.avif')}
+20%{background-image:url('https://i.ibb.co/HTKycbLy/2.webp')}
+40%{background-image:url('https://i.ibb.co/hRRS9vTM/3.jpg')}
+60%{background-image:url('https://i.ibb.co/hFtvv9bk/4.avif')}
+80%{background-image:url('https://i.ibb.co/pBfjvXSx/5.jpg')}
+100%{background-image:url('https://i.ibb.co/FLQDzSGp/1.avif')}
+}
+
+/* ===== BUTTON CONTAINER ===== */
+.button-container{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  gap:12px;
+  width:90%;
+  max-width:300px;
+}
+
+/* ===== 3D BUTTONS ===== */
+.btn3d{
+  width:100%;
+  padding:14px;        /* कम किया */
+  font-size:16px;      /* छोटा किया */
+  color:#fff;
+  border:none;
+  border-radius:12px;
+  cursor:pointer;
+  background:linear-gradient(145deg,#3498db,#2980b9);
+  box-shadow:0 4px 0 #1c5980,0 6px 12px rgba(0,0,0,.4);
+  transition:.2s;
+}
+.btn3d:active{
+  transform:translateY(4px);
+  box-shadow:0 2px 0 #1c5980;
+}
+
+/* ===== BLINKING ANIMATIONS ===== */
+.b1{animation:blink1 2s infinite}
+.b2{animation:blink2 3s infinite}
+.b3{animation:blink3 4s infinite}
+.b4{animation:blink4 5s infinite}
+
+@keyframes blink1{50%{filter:brightness(1.3)}}
+@keyframes blink2{50%{background:#e74c3c}}
+@keyframes blink3{50%{background:#2ecc71}}
+@keyframes blink4{50%{background:#f1c40f}}
+
+/* ===== LOGOUT CONE ===== */
+.logout-cone{
+  position:fixed;
+  top:15px;
+  right:15px;
+  width:40px;   /* थोड़ा छोटा */
+  height:40px;
+  border-radius:50%;
+  border:none;
+  font-size:18px;
+  color:#fff;
+  cursor:pointer;
+  background:linear-gradient(145deg,#ff4b2b,#c0392b);
+  box-shadow:0 3px 0 #8e2b21;
+}
+
+/* RESPONSIVE */
+@media(max-width:500px){
+  .btn3d{font-size:14px;padding:12px}
+  .logout-cone{width:35px;height:35px;font-size:16px}
+}
+</style>
+</head>
+<body>
+
+<!-- 🔊 SOUNDS -->
+<audio id="s1" src="https://www.soundjay.com/buttons/sounds/button-16.mp3"></audio>
+<audio id="s2" src="https://www.soundjay.com/buttons/sounds/button-09.mp3"></audio>
+<audio id="s3" src="https://www.soundjay.com/buttons/sounds/button-4.mp3"></audio>
+<audio id="s4" src="https://www.soundjay.com/buttons/sounds/button-6.mp3"></audio>
+
+<!-- LOGOUT -->
+<button class="logout-cone" onclick="play(4);logout()">⏻</button>
+
+<!-- BUTTONS -->
+<div class="button-container">
+  <button class="btn3d b1" onclick="playAndRedirect(1,'https://electoralsearch.eci.gov.in/',true)">Election Search</button>
+  <button class="btn3d b2" onclick="playAndRedirect(2,'https://mahasecvoterlist.in/ObjectionOnClick/SearchVoterName',true)">Voter Name Search</button>
+  <button class="btn3d b3" onclick="play(3); alert('Upload Image Clicked')">Upload Image</button>
+  <button class="btn3d b4" onclick="playAndRedirect(1,'print.html')">Print Page</button>
+</div>
+
 <script>
-/* Firebase Config */
-const firebaseConfig = {
-  apiKey: "AIzaSyD7x6epAwfshYNzc4G8JvmE4Bu3UNdMB5U",
-  authDomain: "nikah-c234b.firebaseapp.com",
-  databaseURL: "https://nikah-c234b-default-rtdb.firebaseio.com",
-  projectId: "nikah-c234b",
-  storageBucket: "nikah-c234b.appspot.com",
-  messagingSenderId: "760906560668",
-  appId: "1:760906560668:web:0a2c16a47aeaec26482959",
-  measurementId: "G-ENL0FZPEEF"
-};
-firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
-
-/* Check Login */
-auth.onAuthStateChanged(user => {
-  if (!user) window.location.href = 'index.html';
+/* ===== FIREBASE CONFIG ===== */
+firebase.initializeApp({
+  apiKey:"AIzaSyCdjqVFKOQ1dtaXCGFUUtsJWbFdGNTo-xw",
+  authDomain:"voter-25c94.firebaseapp.com",
+  projectId:"voter-25c94"
 });
 
-/* Logout */
-document.getElementById('logoutBtn').addEventListener('click', () => {
-  auth.signOut().then(() => window.location.href = 'index.html');
+/* CHECK LOGIN */
+firebase.auth().onAuthStateChanged(user=>{
+  if(!user) location.href="index.html";
 });
 
-/* Cloudinary Upload */
-function openCloudinaryUpload() {
-  const fileInput = document.createElement('input');
-  fileInput.type = 'file';
-  fileInput.accept = 'image/*';
+/* ===== SOUND FUNCTION ===== */
+function play(n){
+  const a=document.getElementById("s"+n);
+  a.currentTime=0;
+  a.volume=1.0;
+  a.play().catch(()=>{});
+}
 
-  fileInput.onchange = () => {
-    const file = fileInput.files[0];
-    if (!file) return;
+/* ===== REDIRECT WITH SOUND ===== */
+function playAndRedirect(soundNumber,url,isNewTab=false){
+  play(soundNumber);
+  setTimeout(()=>{
+    if(isNewTab) window.open(url,'_blank');
+    else window.location.href=url;
+  },500);
+}
 
-    const cloudName = 'YOUR_CLOUD_NAME';
-    const unsignedUploadPreset = 'dlsqxs7zl';
-    const url = `https://api.cloudinary.com/v1_1/${cloudName}/upload`;
-
-    const formData = new FormData();
-    formData.append('file', file);
-    formData.append('upload_preset', unsignedUploadPreset);
-
-    fetch(url, { method: 'POST', body: formData })
-      .then(res => res.json())
-      .then(data => {
-        if (data.secure_url) {
-          const imagesDiv = document.getElementById('images');
-          const img = document.createElement('img');
-          img.src = data.secure_url;
-          img.style.width = '150px';
-          img.style.height = '150px';
-          img.style.objectFit = 'cover';
-          img.style.borderRadius = '10px';
-          imagesDiv.appendChild(img);
-        } else {
-          alert("Upload failed");
-        }
-      })
-      .catch(err => alert(err));
-  };
-
-  fileInput.click();
+/* ===== LOGOUT ===== */
+function logout(){
+  firebase.auth().signOut().then(()=>location.href="index.html");
 }
 </script>
 
